force-app/main/default/objects/Time_Record_Rollup_Week__c/Time_Record_Rollup_Week__c.object-meta.xml
<CustomObject>
    <description>Time record weekly record time, used by the FR Group</description>
    <label>Time Record Rollup Week</label>
    <nameField>
        <displayFormat>TRRW-{00000000}</displayFormat>
        <label>Time Record Rollup Week Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Record Rollup Weeks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>