force-app/main/default/objects/Time_Record_Rollup_Week__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related engagement</description>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Time Record Rollup Weeks</relationshipLabel>
    <relationshipName>Time_Record_Rollup_Weeks</relationshipName>
    <type>Lookup</type>
</CustomField>