force-app/main/default/objects/Time_Record_Rollup_Week__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Time Record Rollup Weeks</relationshipLabel>
    <relationshipName>Time_Record_Rollup_Weeks</relationshipName>
    <type>Lookup</type>
</CustomField>