force-app/main/default/objects/Time_Record_Rollup_Week__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <formula>BLANKVALUE(BLANKVALUE(Opportunity__r.Name, Engagement__r.Name),Special_Project__r.Name)</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>