force-app/main/default/objects/Time_Record_Rollup_Week__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <description>Presently this is used for reporting display</description>
    <formula>IF(ISBLANK(Engagement__c), IF(ISBLANK( Opportunity__c), IF(TEXT(Special_Project__r.Location_Group__c) == &apos;Top&apos;, &apos;Special Project&apos;, &apos;*Marketing Initiative&apos;), &apos;Opportunity&apos;), &apos;Engagement&apos;)</formula>
    <label>Project Type</label>
    <type>Text</type>
</CustomField>