force-app/main/default/objects/Time_Record_Rollup_Week__c/fields/Report_Formatted_Weekday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Report_Formatted_Weekday_Hours__c</fullName>
    <description>Report formatted hours to remove decimal</description>
    <formula>IF(Hours_Worked_Weekday__c == 0, null, Hours_Worked_Weekday__c)</formula>
    <label>Report Formatted Weekday Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>