force-app/main/default/objects/Time_Record_Rollup_Week__c/fields/Report_Formatted_Weekend_Hours__c.field-meta.xml
<CustomField>
    <fullName>Report_Formatted_Weekend_Hours__c</fullName>
    <description>Report formatted weekend hours to have zero decimals</description>
    <formula>IF(Hours_Worked_Weekend__c  == 0.0, null, Hours_Worked_Weekend__c)</formula>
    <label>Report Formatted Weekend Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>