force-app/main/default/objects/Time_Record_Rollup_Week__c/fields/Report_Sort_Formatted_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Sort_Formatted_Project_Name__c</fullName>
    <description>Used to control sorting on the report</description>
    <formula>CASE(TEXT(Special_Project__r.Location_Group__c),&apos;Top&apos;, &apos;*&apos; + Project_Name__c, &apos;Bottom&apos;, &apos;zz&apos; + Project_Name__c, Project_Name__c)</formula>
    <label>Reporting Sort Formatted Project Name</label>
    <type>Text</type>
</CustomField>