force-app/main/default/objects/Time_Record_Rollup_Week__c/fields/Special_Project__c.field-meta.xml
<CustomField>
    <fullName>Special_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Special Project</label>
    <referenceTo>Special_Project__c</referenceTo>
    <relationshipLabel>Time Record Rollup Weeks</relationshipLabel>
    <relationshipName>Time_Record_Rollup_Weeks</relationshipName>
    <type>Lookup</type>
</CustomField>