force-app/main/default/objects/Time_Record_Rollup_Week__c/fields/Staff_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Staff_Member_Name__c</fullName>
    <formula>Time_Record_Period_Staff_Member__r.Contact__r.Contact_Full_Name__c</formula>
    <label>Staff Member Name</label>
    <type>Text</type>
</CustomField>