force-app/main/default/objects/Time_Record_Rollup_Week__c/fields/Time_Record_Period_Staff_Member__c.field-meta.xml
<CustomField>
    <fullName>Time_Record_Period_Staff_Member__c</fullName>
    <label>Time Record Period Staff Member</label>
    <referenceTo>Time_Record_Period_Staff_Member__c</referenceTo>
    <relationshipLabel>Time Record Rollup Weeks</relationshipLabel>
    <relationshipName>Time_Record_Rollup_Weeks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>