force-app/main/default/objects/Time_Record_Rollup_Week__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>Time_Record_Period_Staff_Member__r.Time_Record_Period__r.Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <type>Text</type>
</CustomField>